# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AuthController;
 use App\Http\Controllers\ProjectController;
 use App\Http\Controllers\TaskController;
 use Illuminate\Http\Request;
@@ -20,3 +21,6 @@ Route::get('task/{task}', [TaskController::class, 'show']);
 Route::post('task', [TaskController::class, 'store']);
 Route::put('task/{task}', [TaskController::class, 'update']);
 Route::delete('task/{task}', [TaskController::class, 'destroy']);
+
+Route::post('/login', [AuthController::class, 'login']);
+Route::post('/logout', [AuthController::class, 'logout'])->middleware('auth:sanctum');
